# chess_bot

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: api.md  architecture.md  internal_automation.md
src/chess_bot/: __init__.py  main.py
src/chess_bot/api/: router.py
src/chess_bot/api/routes/: analysis.py  games.py  health.py
src/chess_bot/automation/: __init__.py  auth.py  board_state.py  engine.py  executor.py  runner.py
src/chess_bot/core/: config.py
src/chess_bot/db/: session.py
src/chess_bot/models/: game.py
src/chess_bot/schemas/: analysis.py  game.py
src/chess_bot/services/: __init__.py  board.py  engine.py
tests/: test_api.py  test_board_service.py
