[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-bot"
version = "0.1.0"
description = "FastAPI chess engine experimentation service."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Andrew Ambuka" }]
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.111.0",
    "pydantic-settings>=2.3.0",
    "python-chess>=1.999",
    "sqlmodel>=0.0.21",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
automation = [
    "playwright>=1.45.0",
]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.10.0",
    "playwright>=1.45.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["chess.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
